--- a/Portsmouth/customcss.css
+++ b/Portsmouth/customcss.css
@@ -1,6 +1,6 @@
 .header{
     position:relative;
-        line-height: 20px;
+    line-height: 20px;
     margin-top: 0px;
     margin-left: px;
     margin-right:0px;
@@ -31,6 +31,44 @@
     left:63.5%;    
 }
 
+.backgroundImage{
+    padding:0;
+    margin: 0;
+    text-align: center;
+    color: white;
+    attachment:fixed;
+}
+
+.menuGroup{
+    border: 3px solid black;
+    border-radius: 8px;
+    background:white;
+    letter-spacing: 2px;
+    opacity: 0.8;
+    padding: 25px;
+    margin: 25px;
+    font-size: 1.8em;
+}
+
+.menuLeft{
+    top:320px;
+    left:5%;
+    float:left;
+    width:45%;
+    padding-left:5%;
+}
+
+.menuRight{
+    top:320px;
+    left:55%;
+    position:absolute;
+    float:right;
+    width:40%;
+    padding-right: 5%;
+}
+.menuText{
+    
+}
 
 
 .footer{
