--- a/Portsmouth/customcss.css
+++ b/Portsmouth/customcss.css
@@ -3,6 +3,7 @@ table{
     margin-left: 5%;
     margin-right: 5%;
     font-size: 1em;
+    clear:both;
 }
 
 tr{
@@ -31,38 +32,102 @@ td{
     width: 30em;
 }
 
+td:hover{
+    opacity: 1;
+}
+
 .header{
     position:relative;
     line-height: 20px;
     margin-top: 0px;
-    margin-left: px;
+    margin-left: 0px;
     margin-right:0px;
     width: 100%;
 }
 
-.headerButtonA{
-
+.headerButtonA, .headerButtonB, .headerButtonC, .headerButtonD{
     position:absolute;
-    top:250px;
-    left:33.5%;    
+    top:255px; 
+    border: none;
+    color: white;
+    font-size: 2em;
+    font-weight: bold;
+    padding: 0.5em;
+    padding-left: 5%;
+    padding-right: 5%;
+    background-color: transparent;
+    text-shadow: -5px 0px 7px #000000;
+    opacity: 0.8;
+}
+
+.headerButtonA:focus, .headerButtonB:focus, .headerButtonC:focus, .headerButtonD:focus {
+    outline:0;
+    opacity: 1;
+    color: black;
+}
+
+.headerButtonA:hover, .headerButtonB:hover, .headerButtonC:hover, .headerButtonD:hover {
+    outline:0;
+    opacity: 1;
+}
+
+.headerButtonA{
+    left: 6.5%;  
 }
 
 .headerButtonB{
-    position:absolute;
-    top:250px;
-    left:43.5%;    
+    left: 28.5%;  
 }
 
 .headerButtonC{
-    position:absolute;
-    top:250px;
-    left:53.5%;    
+    left: 53.5%;  
 }
 
 .headerButtonD{
-    position:absolute;
-    top:250px;
-    left:63.5%;    
+    left: 75.5%;  
+}
+
+.monthHeader, .monthHeaderPrevious, .monthHeaderNext{
+    border: 3px solid black;
+    border-radius: 8px;
+    opacity: 0.8;
+    background:white;
+    padding: 1%;
+    margin: 2%;
+    text-align: center;
+    float:left;
+}
+
+.monthHeader{
+    margin-left:1%;
+    width: 20%;
+}
+
+.monthHeaderPrevious, .monthHeaderNext {
+    margin-top: 2em;
+    width: 10%;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.monthHeaderPrevious{
+    margin-left:27%;
+}
+
+.monthHeaderNext{
+    margin-left:1%;
+}
+
+.monthHeaderPrevious:hover, .monthHeaderNext:hover{
+    opacity: 100;
+}
+
+.monthHeaderPrevious:focus, .monthHeaderNext:focus{
+    outline:none;
+}
+
+.monthNumber{
+    visibility: hidden;
 }
 
 .backgroundImage{
@@ -79,7 +144,6 @@ td{
     background:white;
     letter-spacing: 2px;
     opacity: 0.8;
-    padding: 25px;
     margin: 25px;
     font-size: 1.8em;
 }
@@ -96,7 +160,7 @@ td{
     top:320px;
     left:52%;
     position:absolute;
-    float:right;
+    float:left;
     width:48%;
     padding-right: 5%;
 }
@@ -109,4 +173,33 @@ td{
     position:relative;
     bottom:0;
     width:100%;
+}
+
+.accordion {
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 1.5em;
+    transition: 0.4s;
+    background-color: transparent;
+    margin: 0px;
+    width:100%;
+    padding:0.5em;
+    
+}
+
+.active, .accordion:hover, .menuGroup:hover {
+    opacity: 100;
+}
+
+.accordion:focus{
+    outline:none;
+}
+
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
 }
